[project]
name = "tangram_workspace"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "maturin>=1.9.3",
    { include-group = "typing" },
    { include-group = "lint" },
]
lint = [
    "ruff>=0.12.7",
]
test = [
    "pytest>=8.4.1",
]
typing = [
    "mypy>=1.17.1",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.mypy]
python_version = "3.10"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "W",   # pycodestyle
  "F",   # pyflakes
  "I",   # isort
  "NPY", # numpy
  "DTZ", # flake8-datetimez
  "RUF",
]
