[project]
name = "tangram_workspace"
version = "0.6.0"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Private :: Do Not Upload"
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    { include-group = "build" },
    { include-group = "test" },
    { include-group = "typing" },
    { include-group = "lint" },
]
build = [
    "maturin[patchelf]>=1.14.1; platform_system != 'Windows'",
    "maturin>=1.9.3; platform_system == 'Windows'",
]
test = ["pytest>=9.1.1", "anyio>=4.14.1"]
lint = ["ruff>=0.15.21"]
typing = ["mypy>=2.3.0"]
docs = [
    "zensical>=0.0.50",
    "mkdocstrings-python>=2.0.5",
]

[tool.uv]
exclude-newer = "7 days ago"

[tool.uv.workspace]
members = ["packages/tangram_*"]

[tool.mypy]
python_version = "3.10"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 88
target-version = "py310"
extend-exclude = [
    "*.pyi",   # don't format generated type stubs
]

[tool.ruff.lint]
select = [
    "E",
    "W",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "NPY", # numpy
    "DTZ", # flake8-datetimez
    "RUF",
]
