[project]
name = "tangram"
version = "0.1.0"
description = ""
authors = [
  { name = "Xavier Olive", email = "git@xoolive.org" },
  { name = "Xiaogang Huang", email = "maple.hl@gmail.com" },
  { name = "Junzi Sun", email = "junzi.sun@gmail.com" },
  { name = "Michel Khalaf", email = "khalafmichel98@gmail.com" },
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
  "anyio[trio]>=4.6.2",
  "appdirs>=1.4.4",
  "broadcaster>=0.3.1",
  "fastapi>=0.115.4",
  "httpx>=0.27.2",
  "jinja2>=3.1.4",
  "pandas>=2.2.3",
  "pydantic-settings>=2.6.1",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "redis>=5.2.0",
  "requests>=2.32.3",
  "uvicorn[standard]>=0.32.0",
  "websockets>=13.1",
]

[project.scripts]
tangram = 'tangram.__main__:main'

[tool.uv]
dev-dependencies = ["mypy>=1.13.0", "ruff>=0.7.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
platform = "posix"

color_output = true
pretty = true
show_column_numbers = true
strict = true

# probably redundant, but useful when switching strict to false
check_untyped_defs = true
ignore_missing_imports = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
exclude = [
  '.git',
  '.direnv',
  '.venv',
  'venv',
  '.mypy_cache',
  '.pyenv',
  '.pytype',
  '.vscode',
  '__pypackages__',
  '.dist',
  'result',
  'site-packages',
  'node_modules',
]

line-length = 120
indent-width = 4

target-version = 'py312'

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
