[package]
name = "line-filter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Jet1090 line filter"
repository = "https://github.com/emctoo/line-filter"
keywords = ["rs1090", "jet1090"]

# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
autobins = false

[[bin]]
name = "line-filter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

futures = "0.3"
# futures-util = { version = "0.3.30"}

redis = { version = "0.28", features = ["tokio-comp"] }
clap = { version = "4.5", features = ["color", "derive", "wrap_help", "env"] }

# https://github.com/ISibboI/evalexpr
evalexpr = "12.0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

toml = "0.8"
tempfile = "3.8" # 用于测试
notify = "8"

# https://github.com/jr-1991/evalexpr-jit
# evalexpr_jit = "0.2.0"

# https://github.com/Kixiron/rust-langdev

rs1090 = { version = "0.4.4" }
