[package]
name = "planes"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tangram plane plugin"
repository = "https://github.com/open-aviation/tangram"
keywords = ["rs1090", "jet1090", "trangram"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"

futures = "0.3"
# futures-util = { version = "0.3.30"}

redis = { version = "0.28", features = ["tokio-comp"] }
clap = { version = "4.5", features = ["color", "derive", "wrap_help", "env"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

toml = "0.8"
tempfile = "3.8"
notify = "8"

rs1090 = { version = "0.4.8" }
