[package]
name = "planes"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tangram plane plugin"
repository = "https://github.com/open-aviation/tangram"
keywords = ["rs1090", "jet1090", "trangram"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["color", "derive", "wrap_help", "env"] }
dirs = "6.0.0"
dotenv = "0.15.0"
futures = "0.3"
notify = "8"
redis = { version = "0.28", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
rs1090 = { version = "0.4.8" }
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "2.5.0"

[[bin]]
name = "history"
path = "src/history.rs"
